test-cases/negative/test_064_continue_outside_loop.lay
# negative test: continue statement outside loop
# expected: parser should reject this

continue


